@@ -1,13 +1,14 @@
 package com.example.simplechatapp.config;
 
 
+import com.example.simplechatapp.repository.RefreshTokenRepository;
+import com.example.simplechatapp.security.CustomOAuth2UserService;
 import com.example.simplechatapp.security.filter.JWTCheckFilter;
 import com.example.simplechatapp.security.handler.APILoginFailureHandler;
 import com.example.simplechatapp.security.handler.APILoginSuccessHandler;
 import com.example.simplechatapp.security.handler.CustomAccessDeniedHandler;
-import com.example.simplechatapp.security.CustomOAuth2UserService;
 import com.example.simplechatapp.security.handler.CustomOauthSuccessHandler;
-import jakarta.servlet.http.HttpServletRequest;
+import com.example.simplechatapp.util.JWTUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.context.annotation.Bean;
@@ -15,13 +16,10 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.oauth2.client.web.OAuth2LoginAuthenticationFilter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.HttpStatusReturningLogoutSuccessHandler;
@@ -30,8 +28,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -43,9 +39,9 @@ public class CustomSecurityConfig {
 
 
     private final CustomOAuth2UserService customOAuth2UserService;
-
-//    private final CustomOauthSuccessHandler customOauthSuccessHandler;
-//    private final UserDetailsService userDetailsService;
+    private final JWTUtil jwtUtil;
+    private final CustomOauthSuccessHandler customOauthSuccessHandler;
+    private final RefreshTokenRepository refreshTokenRepository;
 
 
 //    @Bean
@@ -58,47 +54,42 @@ public class CustomSecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         log.info("-----------------security config---------------------");
 
-//        http.cors(httpSecurityCorsConfigurer -> {
-//            httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource());
-//        });
 
         http.httpBasic(AbstractHttpConfigurer::disable)
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(httpSecuritySessionManagementConfigurer ->
                         httpSecuritySessionManagementConfigurer.sessionCreationPolicy(
-                                SessionCreationPolicy.NEVER)).cors(httpSecurityCorsConfigurer -> {
+                                SessionCreationPolicy.STATELESS)).cors(httpSecurityCorsConfigurer -> {
                     httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource());
                 });
 
-            http
+        http
                 .formLogin(config -> {
                     config.loginPage("/api/member/login");
-                    config.successHandler(new APILoginSuccessHandler());
+                    config.successHandler(new APILoginSuccessHandler(jwtUtil,refreshTokenRepository));
                     config.failureHandler(new APILoginFailureHandler());
                 })
                 .oauth2Login(oauth -> oauth.userInfoEndpoint(userInfoEndpointConfig ->
                                 userInfoEndpointConfig.userService(customOAuth2UserService))
-                        .successHandler(new CustomOauthSuccessHandler())
+                        .successHandler(customOauthSuccessHandler)
                         .failureHandler(new APILoginFailureHandler()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/").permitAll()
-                        .requestMatchers("/api/member/refresh").permitAll() //// Oauth2.0 을 추가시 requestMatchers 를 좀 더 엄격히 설정 해야한다.
-                        .requestMatchers("/chat").permitAll() // 웹소켓 처음 연결하는 api : 쿠키를 골라서 보내는 방법이 없길래 일단 제외 했다.
-//                        .requestMatchers("/api/notifications/subscribe").permitAll() // EventSourcePolyfill 추가로 헤더에 토큰을 담아서 보낼 수 있게 됨 따라서 주석 처리
-                        .anyRequest().authenticated()
+                                .requestMatchers("/").permitAll()
+                                .requestMatchers("/api/member/refresh").permitAll() //// Oauth2.0 을 추가시 requestMatchers 를 좀 더 엄격히 설정 해야한다.
+                                .requestMatchers("/chat").permitAll() // 웹소켓 처음 연결하는 api : 쿠키를 골라서 보내는 방법이 없길래 일단 제외 했다.
+                                .anyRequest().authenticated()
 
                 ).logout(logout -> logout
-                .logoutUrl("/api/member/logout")
-                .logoutSuccessHandler(new HttpStatusReturningLogoutSuccessHandler()) //HTTP 상태를 반환
-                .addLogoutHandler(new SecurityContextLogoutHandler()) //세션을 무효화하고 보안 컨텍스를 정리
-                .invalidateHttpSession(true)
-                .clearAuthentication(true)
-                .deleteCookies("JSESSIONID", "member"));
+                        .logoutUrl("/api/member/logout")
+                        .logoutSuccessHandler(new HttpStatusReturningLogoutSuccessHandler()) //HTTP 상태를 반환
+                        .addLogoutHandler(new SecurityContextLogoutHandler()) //세션을 무효화하고 보안 컨텍스를 정리
+                        .invalidateHttpSession(true)
+                        .clearAuthentication(true)
+                        .deleteCookies("JSESSIONID", "member"));
 
 
-        http.addFilterBefore(new JWTCheckFilter(), UsernamePasswordAuthenticationFilter.class);
+        http.addFilterBefore(new JWTCheckFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class);
 //        http.addFilterAfter(new JWTCheckFilter(), OAuth2LoginAuthenticationFilter.class);
-
 
 
         http.exceptionHandling(httpSecurityExceptionHandlingConfigurer -> {
@@ -121,7 +112,7 @@ public class CustomSecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
 
         configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedMethods(List.of("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
